samples/_failures_safe/1761489299_8210ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a173a7e.c: In function ‘main’:
./samples/SAFE/__tmp_6a173a7e.c:144:12: error: missing terminating " character
  144 |     printf("  INFO: %.2f%%\n
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6a173a7e.c:144:5: error: expected expression at end of input
  144 |     printf("  INFO: %.2f%%\n
      |     ^~~~~~
./samples/SAFE/__tmp_6a173a7e.c:144:5: error: expected declaration or statement at end of input
